@@ -120,10 +120,7 @@ Fixes needed for the first release candidate of the Qt4 port
 - when editing source code, many nonexitent signals are used in the code
 - when editing source code, many keyboard shortcuts are signaled as duplicate
 
-- SDCC "other options" is not a list, but 1 huge option
-    sdcc --foo --bar
-    vs
-    sdcc '--foo --bar' <- this is not correct
+
 
 - cannot compile code for PIC, because SDCC complains about the PIC identifier
     - pic16f84 works; others are not clear
