@@ -115,3 +115,7 @@ Changes between Qt3 and Qt4 port (to be completed)
 - fixed: when loading program to PIC, "all supported file types" is not valid
 - fixed: converting C code to hex if destination file does not exist
 - fixed GPLink options pane is broken; GUI needs fixing; added layout to the widget
+- fixed: SDCC "other options" is not a list, but 1 huge option
+    sdcc --foo --bar
+    vs
+    sdcc '--foo --bar' <- this is not correct
